Fix quick-jump clear button bug by moving the .actions div outside .bar
When .actions are inside the search bar, each click is interpreted as a search bar action, that's why the content clears but the .active class doesn't. This commit fixes the issue.

--- a/app/styles/views/_quick-jump.scss
+++ b/app/styles/views/_quick-jump.scss
@@ -95,7 +95,7 @@
 
     position: absolute;
     right: 0;
-    top: 0;
+    top: ($quick-jump-height - $button-size) / 2;
     text-align: right;
     width: 10%;
 
